# Public-API

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
migrations/: base_env.py
migrations/static/: env.py  script.py.mako
migrations/static/versions/: 2022-08-06-1814_42e5bffa12b7_initial_revision.py  2022-08-21-1510_9a2b51bf00df_create_city_company_models.py  2022-08-31-2350_2076dd5362af_create_route_model.py
opt_public_server/common/: graphql.py  repositories.py  settings.py  utils.py
opt_public_server/common/core/: __init__.py  _models.py  _types.py
opt_public_server/common/database/: __init__.py  _types.py  types.py
opt_public_server/common/graphql/: __init__.py  _connections.py  _geography.py  _types.py  _utils.py  connections.py  geography.py
opt_public_server/common/models/: __init__.py  _geography.py  _node.py
opt_public_server/main/: app.py  graphql.py  server.py  settings.py
opt_public_server/static/: database.py  graphql.py  repositories.py
opt_public_server/static/core/: __init__.py  _models.py  _types.py
opt_public_server/static/database/: __init__.py  _engine.py  _models.py  _repositories.py  _types.py  models.py
opt_public_server/static/graphql/: __init__.py  _city.py  _company.py  _mutation.py  _query.py  _route.py  _types.py  city.py  company.py  mutation.py  query.py
opt_public_server/static/models/: __init__.py  _city.py  _company.py  city.py  company.py
opt_public_server/static/repositories/: __init__.py  _city.py  _company.py  city_repository.py  company_repository.py
opt_public_server/static/services/: __init__.py  _city.py  _company.py  _company_route.py  _route.py  city_service.py  company_service.py
tests/static/: data.json  repositories.py
tests/static/database/: conftest.py  test_configuration.py  test_repositories.py
tests/static/graphql/: conftest.py  test_city.py  test_company.py  test_mutation.py  test_query.py  test_route.py  test_schema.py
tests/static/graphql/snapshots/test_city/test_companies/: query.gql  result.json
tests/static/graphql/snapshots/test_city/test_routes/: query.gql  result.json
tests/static/graphql/snapshots/test_company/test_routes/: query.gql  result.json
tests/static/graphql/snapshots/test_mutation/test_add_city/: query.gql  result.json  variables.json
tests/static/graphql/snapshots/test_mutation/test_add_company/: query.gql  result.json  variables.json
tests/static/graphql/snapshots/test_query/test_cities/: query.gql  result.json
tests/static/graphql/snapshots/test_query/test_city/: query.gql  result.json
tests/static/graphql/snapshots/test_query/test_companies/: query.gql  result.json
tests/static/graphql/snapshots/test_query/test_company/: query.gql  result.json
tests/static/graphql/snapshots/test_query/test_routes/: query.gql  result.json
tests/static/graphql/snapshots/test_route/test_scalars/: query.gql  result.json
tests/static/graphql/snapshots/test_schema/test_schema_matches/: schema.gql
