[tool.poetry]
name = "opt-public-server"
version = "0.0.0"
description = "Open provider of global public transit data"
authors = ["Dmitry Semenov <lonelyteapot@gmail.com>"]
repository = "https://github.com/lonelyteapot/OpenPeopleTransport-PublicServer"
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "opt_public_server"}]
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: FastAPI",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Other/Nonlisted Topic",
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.10.1"}
inflection = "^0.5.1"
sqlalchemy = {git = "https://github.com/sqlalchemy/sqlalchemy", rev = "ec65def6"}
uuid6 = "^2022.6.25"
anyio = "^3.6.1"
strawberry-graphql = {version = "^0.127.4", extras = ["fastapi"]}
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
psycopg2 = "^2.9.3"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
bandit = "^1.7.4"
isort = "^5.10.1"
mypy = "^0.971"
flake8 = "^5.0.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-snapshot = "^0.9.0"
alembic = "^1.8.1"

[tool.poetry-dynamic-versioning]
enable = true

[tool.black]
line-length = 88

[tool.isort]
src_paths = ["opt_public_server", "tests"]
profile = "black"
indent = 4
combine_star = true
combine_as_imports = true
lines_after_imports = 2

[tool.mypy]
plugins = "strawberry.ext.mypy_plugin"

[build-system]
requires = ["poetry>=1.2.0b3", "poetry-dynamic-versioning-plugin"]
build-backend = "poetry.core.masonry.api"
